Opened 14 years ago

Closed 14 years ago

#1701 closed defect (fixed)

iff ilbm: some ham6 files decodes with graphics glitches

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: iff
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

I will attache archive with 3 iff ilbm ham6 files and with the output from ffmpeg and wasp (open source).

http://aminet.net/package/misc/fish/fish-0716

C:\>ffmpeg -i 1.iff out.ppm
ffmpeg version N-43803-g2c0b164 Copyright (c) 2000-2012 the FFmpeg developers
  built on Aug 22 2012 02:22:47 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 70.100 / 51. 70.100
  libavcodec     54. 54.100 / 54. 54.100
  libavformat    54. 25.104 / 54. 25.104
  libavdevice    54.  2.100 / 54.  2.100
  libavfilter     3. 13.100 /  3. 13.100
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[iff @ 0x1eace00] Estimating duration from bitrate, this may be inaccurate
Input #0, iff, from '1.iff':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: iff_byterun1 (ILBM / 0x4D424C49), rgba, 320x256, SAR 1:6
4 DAR 5:256, 90k tbr, 90k tbn, 90k tbc
[image2 @ 0x1ea3900] Frame rate very high for a muxer not efficiently supporting
 it.
Please consider specifying a lower framerate, a different muxer or -vsync 2
Output #0, image2, to 'out.ppm':
  Metadata:
    encoder         : Lavf54.25.104
    Stream #0:0: Video: ppm, rgb24, 320x256 [SAR 1:64 DAR 5:256], q=2-31, 200 kb
/s, 90k tbn, 90k tbc
Stream mapping:
  Stream #0:0 -> #0:0 (iff_byterun1 -> ppm)
Press [q] to stop, [?] for help
frame=    1 fps=0.0 q=0.0 Lsize=       0kB time=00:00:00.00 bitrate=   0.0kbits/
s
video:240kB audio:0kB subtitle:0 global headers:0kB muxing overhead -100.000000%

Attachments (1)

ham6.rar (668.9 KB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (6)

by ami_stuff, 14 years ago

Attachment: ham6.rar added

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: iff added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 14 years ago

2.iff and 3.iff were fixed by Peter Ross, 1.iff looks broken with current git head.

$ ffmpeg -i 1.iff
ffmpeg version N-47069-ge55c385 Copyright (c) 2000-2012 the FFmpeg developers
  built on Nov 25 2012 21:21:02 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52.  9.102 / 52.  9.102
  libavcodec     54. 77.100 / 54. 77.100
  libavformat    54. 37.100 / 54. 37.100
  libavdevice    54.  3.100 / 54.  3.100
  libavfilter     3. 23.102 /  3. 23.102
  libswscale      2.  1.102 /  2.  1.102
  libswresample   0. 17.101 /  0. 17.101
  libpostproc    52.  2.100 / 52.  2.100
[iff @ 0x1efb240] Estimating duration from bitrate, this may be inaccurate
Input #0, iff, from '1.iff':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: iff_byterun1 (ILBM / 0x4D424C49), rgb0, 320x256, SAR 1:64 DAR 5:256, 90k tbr, 90k tbn, 90k tbc
At least one output file must be specified

in reply to:  2 comment:3 by Carl Eugen Hoyos, 14 years ago

Replying to cehoyos:

2.iff and 3.iff were fixed by Peter Ross, 1.iff looks broken with current git head.

Only reproducible with ffplay, 1.iff decodes fine with ffmpeg.

comment:4 by pross, 14 years ago

@cehoyos

the graphics glitches in 1.iff are fixed, however the file has "bad" aspect ratio inforamation (1:64).

This is covered by https://ffmpeg.org/trac/ffmpeg/ticket/1699

If you agree, I suggest closing this ticket!

comment:5 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

Sorry for the noise!

Note: See TracTickets for help on using tickets.